<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/resourceIcon1"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.99"
        android:contentDescription="@string/oreimage"
        android:scaleType="fitCenter"
        android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

    <EditText
        android:id="@+id/amountEdit1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_weight="2"
        android:ems="5"
        android:hint="@string/amount_material"
        android:inputType="number" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/calc_stacks_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/calc_stacks"
            android:inputType="number" />

        <EditText
            android:id="@+id/calc_rest_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/calc_rest"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>